tests/tmytests/bad/field_collision_1.lat
class Collision {
    int a;
    int b;
    string a;
}

int main() {
    return 0;
}